[FE] FIX: leftNavWrap 위치 수정 #817

--- a/frontend/src/assets/css/media.css
+++ b/frontend/src/assets/css/media.css
@@ -7,7 +7,7 @@
     background-color: var(--white);
     height: calc(100% - 80px);
     z-index: 9;
-    transform: translateX(-100%);
+    transform: translateX(-120%);
     transition: transform 0.3s ease-in-out;
     box-shadow: 0 0 40px 0 var(--bg-shadow);
   }
